--- a/mobile/www/i18n/fr/more.json
+++ b/mobile/www/i18n/fr/more.json
@@ -7,6 +7,16 @@
             "change": "Langue",
             "english": "Anglais",
             "french": "Français"
+        },
+        "endpoint": {
+            "title": "Server",
+            "change": "Change Server",
+            "error": "Cannot reach server.",
+            "authenticate": {
+                "title": "Successfully changed endpoint",
+                "body": "Please reauthenticate with the new server."
+            },
+            "default": "Use default server"
         }
     }
 
