--- a/src/main/webapp/i18n/en/home.json
+++ b/src/main/webapp/i18n/en/home.json
@@ -1,43 +1,171 @@
 {
+    // Home View
     "home": {
-        "title": "Title",
         "timeline": "Timeline",
         "mentions": "Mentions",
         "favorites": "Favorites",
-            "form": {
-                "cancel": "Cancel",
-                "presentation": "Launch presentation"
-            },
-            "tag": {
-                "title": "Tag",
-                "follow": "Follow",
-                "following": "Following",
-                "unfollow": "Unfollow"
-            },
-            "welcome": {
-                "title": "Welcome to Tatami",
-                "message": "Your timeline is empty! Do you need help to learn how to use Tatami? Please click on the button below to launch a presentation.",
-                "timeline": {
-                    "title": "Timeline",
-                    "line1": "Test line1"
+        "companyTimeline": "Company Timeline",
+
+        "newMessage": "New Message",
+        "newMessages": "New Messages",
+
+        //Top Menu
+        "menu": {
+            "logo": "Ippon Technologies Logo",
+            "title": "Tatami",
+            "about": {
+                "title": "About",
+                "version" : "Version",
+                "presentation": "Presentation",
+                "tos": "Terms of Service",
+                "language": {
+                    "language": "Language",
+                    "en": "English",
+                    "fr": "Français"
+                },
+                "license": "Source Code License",
+                "github": {
+                    "issues": "Submit a Bug Report",
+                    "fork": "Fork Tatami on Github"
+                },
+                "ippon": {
+                    "website": "Ippon Technologies Website",
+                    "blog": "Ippon Technologies Blog",
+                    "twitter": "Follow @ippontech on Twitter"
                 }
             },
-            "sidebar": {
-                "myGroups": "My Groups",
-                "trends": "Trends",
-                "whoToFollow": "Who to Follow",
-                "private": "PVT",
-                "public": "PUB",
-                "administrator": "A"
-            },
-            "status": {
-                "reply": "Reply",
-                "share": "Share",
-                "favorite": "Favorite",
-                "announce": "Announce",
-                "delete": "Delete",
-                "replyTo": "In reply to ",
-                "viewConversation": "View Conversation"
+            "search": "Search",
+            "help": "Help",
+            "account": {
+                "title": "Account",
+                "companyTimeline": "Company Timeline",
+                "logout": "Logout"
             }
+        },
+
+        // Post Modal
+        "post": {
+            "mandatory": "Comment is mandatory",
+            "content": {
+                "mandatory": "Please fill out this field."
+            },
+            "update": "Update your status",
+            "replyTo": "Reply",
+            "preview": "Preview",
+            "edit": "Edit",
+            "characters": {
+                "left": "Characters Left:"
+            },
+            "options": "Options",
+            "shareLocation": "Share Location",
+            "group": "Group",
+            "reply": "Reply to this status",
+            "files": "Files",
+            "drop": {
+                "file": "Drop your files here"
+            },
+            "markdown": "Markdown Supported",
+            "button": "Post"
+        },
+
+        // Home Sidebar View
+        "sidebar": {
+            "myGroups": "My Groups",
+            "whoToFollow": "Who To Follow",
+            "trends": "Trends",
+            "public": "PUB",
+            "private": "PVT",
+            "archived": "ARC",
+            "administrator": "A",
+            "publicToolTip": "Public Group",
+            "privateToolTip": "Private Group",
+            "archivedToolTip": "Archived Group",
+            "administratorToolTip": "You administer this group."
+        },
+
+        // Status List item or User List item
+        "status": {
+            "replyTo": "In reply to",
+            "private": "Private Message",
+            "reply": "Reply",
+            "share": "Share",
+            "favorite": "Favorite",
+            "delete": "Delete",
+            "confirmDelete": "Are you sure you want to delete this status?",
+            "sharedYour": "shared your status",
+            "followed": "followed you",
+            "shared": "shared",
+            "groupAdmin": "Group Administrator",
+            "announce": "Announce",
+            "isAnnounced": "Announced by",
+            "viewConversation": "View Conversation",
+            "shares": "Shares"
+        },
+
+        // Tag View
+        "tag": {
+            "title": "Tag",
+            "follow": "Follow",
+            "following": "Following",
+            "unfollow": "Unfollow"
+        },
+
+        // Group View
+        "group": {
+            "join": "Join",
+            "joined": "Joined",
+            "leave": "Leave",
+            "manage": "Manage",
+            "statuses": "Statuses",
+            "members": "Members",
+            "membersSingular": "1 Member",
+            "membersPlural": "{{ amount }} Members"
+        },
+
+        // Profile View
+        "profile": {
+            "statuses": "Statuses",
+            "following": "Following",
+            "followers": "Followers",
+            "follow": "Follow",
+            "unfollow": "Unfollow",
+            "followsYou": "Follows You",
+
+            "youStatusesSingular": "Your 1 status",
+            "youStatusesPlural": "Your {{ amount }} statuses",
+            "youFollowingSingular": "You follow 1 person",
+            "youFollowingPlural": "You follow {{ amount }} people",
+            "youFollowersSingular": "Your 1 follower",
+            "youFollowersPlural": "Your {{ amount }} followers",
+
+            "userStatusesSingular": "@{{ username }} posted 1 status",
+            "userStatusesPlural": "@{{ username }} posted {{ amount }} statuses",
+            "userFollowingSingular": "@{{ username }} follows 1 person",
+            "userFollowingPlural": "@{{ username }} follows {{ amount }} people",
+            "userFollowersSingular": "@{{ username }} has 1 follower",
+            "userFollowersPlural": "@{{ username }} has {{ amount }} followers",
+
+            "deactivatedUser": "Deactivated User",
+
+            // Profile Sidebar View
+            "sidebar": {
+                "information": "Information",
+                "statistics": "Statistics",
+                "firstName": "First Name",
+                "lastName": "Last Name",
+                "email": "Email",
+                "jobTitle": "Job Title",
+                "phoneNumber": "Phone Number",
+                "statuses": "Statuses",
+                "following": "Following",
+                "followers": "Followers",
+                "trends": "Trends"
+            }
+        },
+
+        "searchPage": {
+            "title": "Search",
+            "statusesWith": "Statuses with"
+        }
     }
 }
