--- a/src/main/webapp/i18n/en/about.json
+++ b/src/main/webapp/i18n/en/about.json
@@ -8,23 +8,23 @@
             "row1": {
                 "title": "A private, enterprise social network",
                 "line1": "Update your status to inform your co-workers",
-                "line2": "Subscribe to other employees" time lines",
+                "line2": "Subscribe to other employees' time lines",
                 "line3": "Share important information to your followers",
                 "line4": "Discuss and reply to your colleagues",
                 "line5": "Put important information into favorites",
                 "line6": "Search useful information with our integrated search engine",
                 "line7": "Use hashtags to find related information",
-                "line8": "Go to your co-workers" profiles to see what they are working on",
+                "line8": "Go to your co-workers' profiles to see what they are working on",
                 "line9": "English and French versions available, adding other languages is easy"
             },
             "row2": {
                 "title": "Works on all devices!",
                 "line1": "Dynamic web application (HTML5): nothing to install, except a modern browser!",
-                "line2": "Works on mobile devices, tablets, or standard computers: the application adapts itself automatically to your device"s screen",
+                "line2": "Works on mobile devices, tablets, or standard computers: the application adapts itself automatically to your device's screen",
                 "line3": "Stay connected with your enterprise wherever you are"
             },
             "row3": {
-                "title": "Easy installation and integration with your company"s IT infrastructure",
+                "title": "Easy installation and integration with your company's IT infrastructure",
                 "line1": "Standard Java application",
                 "line2": "Your data belongs to you, not to your SaaS vendor!",
                 "line3": "Integrates with your LDAP directory",
@@ -36,7 +36,7 @@
             },
             "row4": {
                 "title": "Also available in SaaS mode, fully managed by Ippon Technologies",
-                "line1": "If you do not want to install Tatami in your company, it"s easy to use directly",
+                "line1": "If you do not want to install Tatami in your company, it's easy to use directly",
                 "line2": "Secured multi-enterprise mode: every company has its own private space",
                 "line3": "256 bits SSL encryption: all data transfers are fully secured"
             },
