--- a/src/main/webapp/i18n/fr/home.json
+++ b/src/main/webapp/i18n/fr/home.json
@@ -1,5 +1,4 @@
 {
-    // Home View
     "home": {
         "timeline": "Timeline",
         "mentions": "Mentions",
@@ -9,7 +8,6 @@
         "newMessage": "Nouveau Message",
         "newMessages": "Nouveaux Messages",
 
-        //Top Menu
         "menu": {
             "logo": "Ippon Technologies Logo",
             "title": "Tatami",
@@ -17,7 +15,7 @@
                 "title": "Information",
                 "version" : "Version",
                 "presentation": "Présentation",
-                "tos": "Conditions générales d\'utilisation",
+                "tos": "Conditions générales d'utilisation",
                 "language": {
                     "language": "Language",
                     "en": "English",
@@ -29,8 +27,8 @@
                     "fork": "Fork Tatami sur Github"
                 },
                 "ippon": {
-                    "website": "Site d\'Ippon Technologies",
-                    "blog": "Blog d\'Ippon Technologies",
+                    "website": "Site d'Ippon Technologies",
+                    "blog": "Blog d'Ippon Technologies",
                     "twitter": "Suivez @ippontech sur Twitter"
                 }
             },
@@ -43,7 +41,6 @@
             }
         },
 
-        // Post Modal
         "post": {
             "mandatory": "Commentaire obligatoire",
             "content": {
@@ -68,7 +65,6 @@
             "button": "Post"
         },
 
-        // Home Sidebar View
         "sidebar": {
             "myGroups": "Mes Groupes",
             "whoToFollow": "Qui Suivre",
@@ -83,7 +79,6 @@
             "administratorToolTip": "Vous administrez ce groupe."
         },
 
-        // Status List item or User List item
         "status": {
             "replyTo": "En réponse à",
             "private": "Message privé",
@@ -102,7 +97,6 @@
             "shares": "Partages"
         },
 
-        // Tag View
         "tag": {
             "title": "Tag",
             "follow": "Abonnés",
@@ -110,7 +104,6 @@
             "unfollow": "Se désabonner"
         },
 
-        // Group View
         "group": {
             "join": "Joindre",
             "joined": "a rejoins",
@@ -122,7 +115,6 @@
             "membersPlural": "{{ amount }} Membres"
         },
 
-        // Profile View
         "profile": {
             "statuses": "Statuts",
             "following": "Abonnement",
@@ -147,7 +139,6 @@
 
             "deactivatedUser": "Utilisateur désactivé",
 
-            // Profile Sidebar View
             "sidebar": {
                 "information": "Information",
                 "statistics": "Statistiques",
