Stop ion-infinite-list when we reach the end of the list

--- a/mobile/www/i18n/en/status.json
+++ b/mobile/www/i18n/en/status.json
@@ -5,6 +5,7 @@
             "mention": "Your status has been shared"
         },
         "reply": "In reply to ",
-        "follower": "New follower"
+        "follower": "New follower",
+        "delete": "Are you sure you want to delete the status?"
     }
 }
