--- a/src/main/webapp/i18n/en/post.json
+++ b/src/main/webapp/i18n/en/post.json
@@ -19,7 +19,6 @@
         "drop": {
             "file": "Drop your files here"
         },
-        "markdown": "Markdown Supported",
-        "button": "Post"
+        "markdown": "Markdown Supported"
     }
 }
