--- a/src/main/webapp/i18n/fr/post.json
+++ b/src/main/webapp/i18n/fr/post.json
@@ -19,7 +19,7 @@
         "drop": {
             "file": "Déposez vos fichiers ici"
         },
-        "markdown": "Markdown Supported",
+        "markdown": "Markdown pris en charge",
         "button": "Post"
     }
 }
