--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -3,6 +3,53 @@
         "timeline": "Timeline",
         "error": "Il y a une erreur",
         "pageNotFound": "Page non trouvée.",
+        "welcome": {
+            "title": "Bienvenue sur Tatami",
+            "message": "Votre timeline est vide! Avez-vous besoin d'aide pour apprendre à utilizer Tatami? Veuillez cliquer sur le bouton ci-dessous pour lancer une présentation.",
+            "presentation": "Lancer la présentation",
+            "help": {
+                "title": "Aide",
+                "line1": "Bienvenue sur l'aide en ligne!",
+                "line2":" Suivez les étapes suivantes pour une présentation des principales caractéristiques de Tatami ."
+            },
+            "timeline": {
+                "title": "Timeline",
+                "line1": "Ceci est votre timeline. Il affiche tous les messages",
+                "bulletPoint1": "vous mentionner ou envoyé en privé à vous",
+                "bulletPoint2": "envoyé par les utilisateurs que vous suivez",
+                "bulletPoint3": "envoyé par vous-même ",
+                "bulletPoint4": "envoyé à un groupe auquel vous êtes abonné(e)",
+                "afterBP1": "Si elle est vide, ne vous inquiétez pas, elle sera mise à jour dès que vous commencez à suivre d'autres utilisateurs!",
+                "afterBP2": "Lors de l'affichage d'un message, vous pouvez y répondre et le marquer comme favori pour le retrouver plus facilement.",
+                "afterBP3": "Si un message avait déjà obtenu quelques réponses, vous pouvez voir tous les détails en cliquant sur detail : ce sera plus facile de suivre la conversation sur Tatami."
+            },
+            "post": {
+                "title": "Envoyer un message",
+                "line1": "C'est ici que vous écrivez les messages que vous souhaitez partager",
+                "bulletPoint1": "tous les messages sont publics par défaut. Ils seront affichés à tous les utilisateurs qui vous suivent",
+                "bulletPoint2": "pour écrire un message, vous pouvez utiliser de #hashtags : cela signifie tout simplement l'ajout d'un «#» au début des mots importants qui peuvent ensuite être utilisé pour trouver votre message",
+                "bulletPoint3": "pour mentionner ou répondre à d'autres utilisateurs, vous devez ajouter un @ au début de leur nom : ils seront informés que vous vous adressez à eux"
+            },
+            "groups": {
+                "title": "Groupes",
+                "line1": "Ceci est la liste des groupes auquel vous appartenez.",
+                "line2": "Vous pouvez trouver et vous abonner à des groupe public dans la page Account/Groupes (menu en haut à droite).",
+                "line3": "Il y a aussi des groupes privés : vous ne pouvez pas vous y inscrire;  le propriétaire du groupe doit vous ajouter en tant que membre."
+            },
+            "trends": {
+                "title": "Tendances",
+                "line1": "Cette liste représente les #hashtag qui sont les plus souvent utilisés sur Tatami. Utilisez-la pour découvrir ce qui ce passe et quels sont les sujets les plus chauds sur Tatami!"
+            },
+            "whoToFollow": {
+                "title": "Utilisateurs suggérées",
+                "line1": "Ceci est une liste d'utilisateurs qui partagent des intérêts communs avec vous et que vous pourriez suivre.",
+                "line2": "Si vous êtes un nouvel utilisateur, cette liste est probablement vide : Tatami a besoin de temps pour apprendre qui vous êtes afin de vous proposer des utilisateurs",
+                "line3": "Et n'oubliez pas d'utiliser des #hashtags dans vos messages, cela rend tout plus facile !"
+            },
+            "next": "Suivant",
+            "previous": "Précédent",
+            "end": "Fin"
+        },
         "post": {
             "button": "Post"
         },
