group timeline page to show statuses and members

--- a/src/main/webapp/i18n/en/home.json
+++ b/src/main/webapp/i18n/en/home.json
@@ -8,6 +8,12 @@
         "newMessage": "New Message",
         "newMessages": "New Messages",
 
+        "group":{
+            "statuses": "statuses",
+            "membersSingular": "Member",
+            "membersPlural": "Members"
+        },
+
         "post": {
             "mandatory": "Comment is mandatory",
             "content": {
