--- a/src/main/webapp/i18n/fr/home.json
+++ b/src/main/webapp/i18n/fr/home.json
@@ -8,6 +8,12 @@
         "newMessage": "Nouveau Message",
         "newMessages": "Nouveaux Messages",
 
+        "group":{
+            "statuses": "statuts",
+            "membersSingular": "Membre",
+            "membersPlural": "Membres"
+        },
+
         "post": {
             "mandatory": "Commentaire obligatoire",
             "content": {
