Fixed how the clientId is retrieved and disable GoogleLogin if it's undefined

--- a/mobile/www/i18n/en/login.json
+++ b/mobile/www/i18n/en/login.json
@@ -7,6 +7,7 @@
         "success": "Logged In!",
         "failed": "Failed to log in!",
         "progress": "Login in progress...",
-        "tos": "Accept Terms of Service"
+        "tos": "Accept Terms of Service",
+        "googleUnavaible": "Google Login is not available on this server"
     }
 }
