Limited the maximum length of a post to 750 chars.

--- a/mobile/www/i18n/en/post.json
+++ b/mobile/www/i18n/en/post.json
@@ -4,7 +4,8 @@
         "message": "Post Here...",
         "progress": "Post in progress...",
         "error": {
-            "message": "Something went wrong. Returning to Timeline"
+            "message": "Something went wrong. Returning to Timeline",
+            "truncated": "Your post has been truncated to remain under the max length"
         }
     }
 }
