--- a/mobile/www/i18n/fr/post.json
+++ b/mobile/www/i18n/fr/post.json
@@ -4,7 +4,8 @@
         "message": "Ecrivez votre message ici...",
         "progress": "Post en cours...",
         "error": {
-            "message": "Un problème est survenu. Retour à la Timeline."
+            "message": "Un problème est survenu. Retour à la Timeline.",
+            "truncated": "Votre message a été tronqué afin de respecter la longueur maximale autorisée"
         }
     }
 }
