Add a menu option under a status that shows a popover menu to delete a status, and reporting user options

--- a/mobile/www/i18n/en/status.json
+++ b/mobile/www/i18n/en/status.json
@@ -6,6 +6,12 @@
         },
         "reply": "In reply to ",
         "follower": "New follower",
-        "delete": "Are you sure you want to delete the status?"
+        "delete": "Are you sure you want to delete the status?",
+        "block": {
+            "reportUser": "Report User",
+            "reportStatus": "Report Status",
+            "blockUser": "Hide from timeline"
+        }
     }
+
 }
