--- a/mobile/www/i18n/fr/status.json
+++ b/mobile/www/i18n/fr/status.json
@@ -8,9 +8,9 @@
         "follower": "Nouvel abonné",
         "delete": "Êtes-vous sûr de vouloir supprimer ce statut?",
         "block": {
-            "reportUser": "Report User",
-            "reportStatus": "Report Status",
-            "blockUser": "Hide from timeline"
+            "reportUser": "Signaler cet utilisateur",
+            "reportStatus": "signaler ce statut",
+            "blockUser": "Bloquer cet utilisateur"
         }
     }
 }
