Create the settings state as a substate of more.

--- a/mobile/www/i18n/en/more.json
+++ b/mobile/www/i18n/en/more.json
@@ -2,6 +2,8 @@
     "more": {
         "title": "More Options",
         "company": "Company Timeline",
+        "settings": "Settings",
+        "blockedusers": "Manage your blocked users",
         "logout": "Logout",
         "language": {
             "change": "Language",
