Create the state for managing the blocked-users state as a substate of more.

--- a/mobile/www/i18n/en/more.json
+++ b/mobile/www/i18n/en/more.json
@@ -3,7 +3,10 @@
         "title": "More Options",
         "company": "Company Timeline",
         "settings": "Settings",
-        "blockedusers": "Manage your blocked users",
+        "blockedusers": {
+            "manage": "Manage your blocked users",
+            "no": "You don't have any blocked user"
+        },
         "logout": "Logout",
         "language": {
             "change": "Language",
