--- a/mobile/www/i18n/fr/more.json
+++ b/mobile/www/i18n/fr/more.json
@@ -3,7 +3,10 @@
         "title": "Plus d'options",
         "company": "Timeline Entreprise",
         "settings": "Paramètres",
-        "blockedusers": "Gérer les utilisateurs bloqués",
+        "blockedusers": {
+            "manage": "Gérer les utilisateurs bloqués",
+            "no": "Vous n'avez bloqué aucun utilisateur"
+        },
         "logout": "Déconnexion",
         "language": {
             "change": "Langue",
