--- a/mobile/www/i18n/fr/status.json
+++ b/mobile/www/i18n/fr/status.json
@@ -7,10 +7,13 @@
         "reply": "En réponse à ",
         "follower": "Nouvel abonné",
         "delete": "Êtes-vous sûr de vouloir supprimer ce statut?",
+        "report" : "Supprimer",
+        "reportMessage": "Ce statut a été signalé",
         "block": {
             "reportUser": "Signaler cet utilisateur",
             "reportStatus": "Signaler ce statut",
-            "blockUser": "Bloquer cet utilisateur"
+            "blockUser": "Bloquer cet utilisateur",
+            "delete": "Supprimer"
         }
     }
 }
