--- a/services/src/main/resources/META-INF/tatami/mails/messages/messages_en.properties
+++ b/services/src/main/resources/META-INF/tatami/mails/messages/messages_en.properties
@@ -34,6 +34,12 @@ userMention.text1=Someone mentioned you on Tatami:
 userMention.text2=You can see this status on Tatami:
 userMention.text3=Regards,
 
+reportedStatus.title=Reported Status on Tatami
+reportedStatus.greeting=Dear
+reportedStatus.text1=Someone reported a status on Tatami:
+reportedStatus.text2=You can see this status on Tatami:
+reportedStatus.text3=Regards,
+
 invitationMessage.title=One of your co-workers invited you to Tatami
 invitationMessage.greeting=Hello,
 invitationMessage.text1=invited you to Tatami, your company's social network.
