--- a/services/src/main/resources/META-INF/tatami/mails/messages/messages_fr.properties
+++ b/services/src/main/resources/META-INF/tatami/mails/messages/messages_fr.properties
@@ -34,6 +34,12 @@ userMention.text1=Vous avez été mentionné sur Tatami :
 userMention.text2=Pour voir ce message sur Tatami :
 userMention.text3=Cordialement,
 
+reportedStatus.title=Reported Status on Tatami
+reportedStatus.text1=Someone reported a status on Ta
+reportedStatus.greeting=Deartami:
+reportedStatus.text2=Pour voir ce message sur Tatami:
+reportedStatus.text3=Cordialement,
+
 invitationMessage.title=Un de vos collègues vous a invité sur Tatami
 invitationMessage.greeting=Bonjour
 invitationMessage.text1=vous a invité sur Tatami, votre réseau social d'entreprise.
