Ability to block/unblock + popups

--- a/mobile/www/i18n/en/user.json
+++ b/mobile/www/i18n/en/user.json
@@ -4,6 +4,14 @@
             "title": "Profile"
         },
         "follow": "Follow",
-        "unfollow": "Unfollow"
+        "unfollow": "Unfollow",
+        "block":{
+            "success": "You have blocked this User. You won't see his posts anymore.",
+            "title": "Block"
+        } ,
+        "unblock": {
+            "success": "You unblocked this user.",
+            "title": "Unblock"
+        }
     }
 }
