Moved endpoint to login screen, added base code for hiding delete button from non-admin users unless they own the status, made style changes

--- a/mobile/www/i18n/en/login.json
+++ b/mobile/www/i18n/en/login.json
@@ -9,6 +9,10 @@
         "progress": "Login in progress...",
         "googleUnavaible": "Google Login is not available on this server",
         "tos": "Terms of Service",
-        "accept": "Accept"
+        "accept": "Accept",
+        "endpoint": {
+            "current": "Current Server:",
+            "modify": "Modify"
+        }
     }
 }
